--- a/Arisco Website/init.html
+++ b/Arisco Website/init.html
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿<!-- 
+------------------ ARISCO WEBSITE  -----------------------
+------- ANA TEIXEIRA  ---- 10 SEPTEMBER -----------------
+---------------------------------------------------------
+-->
+<!DOCTYPE html>
 <head>
     <title>ARisCo</title>
     <script src="javascript/main.js"></script>
