--- a/Arisco Website/resultPage.html
+++ b/Arisco Website/resultPage.html
@@ -1,4 +1,10 @@
-﻿<!doctype html>
+﻿<!-- 
+------------------ ARISCO WEBSITE  -----------------------
+------- ANA TEIXEIRA  ---- 10 SEPTEMBER -----------------
+---------------------------------------------------------
+-->
+
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
